[package]
name = "optimistic-mutation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
enum_glob_use = "deny"
pedantic =  { level = "warn", priority = -1 }
nursery =  { level = "warn", priority = -1 }

[dependencies]
sugaru = { git = "https://github.com/Carlo-Mask/sugaru" }
